<resources>
    <string name="app_name">SaudeMais</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="ultimo_nome">Último Nome</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="peso">Peso</string>
    <string name="genero">Genero</string>
    <string name="alergias">Alergias</string>
    <string name="quadro_clinico">Quadro Clinico</string>
    <string name="seguinte">Seguinte</string>
    <string name="disclaimer">Qualquer diagnóstico encontra-se sujeito a avaliação médica!</string>
    <string name="altura">Altura</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="login">Login</string>
    <string name="sintoma">Sintoma</string>
    <string name="novo_nome">Novo Nome</string>
    <string name="diagn_stico">Diagnóstico</string>
    <string name="ver_hospitais_pr_ximos">Ver Hospitais Próximos</string>


    <string-array name="sintomas">
        <item>itching</item>
        <item>skin_rash</item>
        <item>nodal_skin_eruptions</item>
        <item>dischromic_patches</item>
        <item>continuous_sneezing</item>
        <item>shivering</item>
        <item>chills</item>
        <item>watering_from_eyes</item>
        <item>stomach_pain</item>
        <item>acidity</item>
        <item>ulcers_on_tongue</item>
        <item>vomiting</item>
        <item>cough</item>
        <item>chest_pain</item>
        <item>yellowish_skin</item>
        <item>nausea</item>
        <item>loss_of_appetite</item>
        <item>abdominal_pain</item>
        <item>yellowing_of_eyes</item>
        <item>burning_micturition</item>
        <item>spotting_urination</item>
        <item>passage_of_gases</item>
        <item>internal_itching</item>
        <item>indigestion</item>
        <item>muscle_wasting</item>
        <item>patches_in_throat</item>
        <item>high_fever</item>
        <item>extra_marital_contacts</item>
        <item>fatigue</item>
        <item>weight_loss</item>
        <item>restlessness</item>
        <item>lethargy</item>
        <item>irregular_sugar_level</item>
        <item>blurred_and_distorted_vision</item>
        <item>obesity</item>
        <item>excessive_hunger</item>
        <item>increased_appetite</item>
        <item>polyuria</item>
        <item>sunken_eyes</item>
        <item>dehydration</item>
        <item>diarrhoea</item>
        <item>breathlessness</item>
        <item>family_history</item>
        <item>mucoid_sputum</item>
        <item>headache</item>
        <item>dizziness</item>
        <item>loss_of_balance</item>
        <item>lack_of_concentration</item>
        <item>stiff_neck</item>
        <item>depression</item>
        <item>irritability</item>
        <item>visual_disturbances</item>
        <item>back_pain</item>
        <item>weakness_in_limbs</item>
        <item>neck_pain</item>
        <item>weakness_of_one_body_side</item>
        <item>altered_sensorium</item>
        <item>dark_urine</item>
        <item>sweating</item>
        <item>muscle_pain</item>
        <item>mild_fever</item>
        <item>swelled_lymph_nodes</item>
        <item>malaise</item>
        <item>red_spots_over_body</item>
        <item>joint_pain</item>
        <item>pain_behind_the_eyes</item>
        <item>constipation</item>
        <item>toxic_look_(typhos)</item>
        <item>belly_pain</item>
        <item>yellow_urine</item>
        <item>receiving_blood_transfusion</item>
        <item>receiving_unsterile_injections</item>
        <item>coma</item>
        <item>stomach_bleeding</item>
        <item>acute_liver_failure</item>
        <item>swelling_of_stomach</item>
        <item>distention_of_abdomen</item>
        <item>history_of_alcohol_consumption</item>
        <item>fluid_overload</item>
        <item>phlegm</item>
        <item>blood_in_sputum</item>
        <item>throat_irritation</item>
        <item>redness_of_eyes</item>
        <item>sinus_pressure</item>
        <item>runny_nose</item>
        <item>congestion</item>
        <item>loss_of_smell</item>
        <item>fast_heart_rate</item>
        <item>rusty_sputum</item>
        <item>pain_during_bowel_movements</item>
        <item>pain_in_anal_region</item>
        <item>bloody_stool</item>
        <item>irritation_in_anus</item>
        <item>cramps</item>
        <item>bruising</item>
        <item>swollen_legs</item>
        <item>swollen_blood_vessels</item>
        <item>prominent_veins_on_calf</item>
        <item>weight_gain</item>
        <item>cold_hands_and_feets</item>
        <item>mood_swings</item>
        <item>puffy_face_and_eyes</item>
        <item>enlarged_thyroid</item>
        <item>brittle_nails</item>
        <item>swollen_extremeties</item>
        <item>abnormal_menstruation</item>
        <item>muscle_weakness</item>
        <item>anxiety</item>
        <item>slurred_speech</item>
        <item>palpitations</item>
        <item>drying_and_tingling_lips</item>
        <item>knee_pain</item>
        <item>hip_joint_pain</item>
        <item>swelling_joints</item>
        <item>painful_walking</item>
        <item>movement_stiffness</item>
        <item>spinning_movements</item>
        <item>unsteadiness</item>
        <item>pus_filled_pimples</item>
        <item>blackheads</item>
        <item>scurring</item>
        <item>bladder_discomfort</item>
        <item>foul_smell_ofurine</item>
        <item>continuous_feel_of_urine</item>
        <item>skin_peeling</item>
        <item>silver_like_dusting</item>
        <item>small_dents_in_nails</item>
        <item>inflammatory_nails</item>
        <item>blister</item>
        <item>red_sore_around_nose</item>
        <item>yellow_crust_ooze</item>
        <item>prognosis</item>
    </string-array>
    <string name="title_activity_teste">teste</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>