<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="57dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idade"
        android:layout_width="202dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="55dp"
        tools:layout_conversion_absoluteWidth="202dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_nascimento"
            android:inputType="datetime"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="202dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="106dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/peso"
        android:layout_width="202dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="@+id/idade"
        app:layout_constraintStart_toStartOf="@+id/idade"
        app:layout_constraintTop_toBottomOf="@+id/idade"
        tools:layout_conversion_absoluteHeight="55dp"
        tools:layout_conversion_absoluteWidth="202dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peso"
            android:inputType="numberDecimal"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="202dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="192dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/altura"
        android:layout_width="202dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="@+id/peso"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/peso"
        app:layout_constraintTop_toBottomOf="@id/peso"
        tools:layout_conversion_absoluteHeight="55dp"
        tools:layout_conversion_absoluteWidth="202dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/altura"
            android:inputType="numberDecimal"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="202dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="279dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/genero"
        android:layout_width="202dp"
        android:layout_height="80dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/altura"
        app:layout_constraintStart_toStartOf="@+id/altura"
        app:layout_constraintTop_toBottomOf="@id/altura"
        tools:layout_conversion_absoluteHeight="80dp"
        tools:layout_conversion_absoluteWidth="202dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genero"
            android:inputType="text"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_conversion_absoluteWidth="202dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="366dp" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>